--- a/backend/portfolio/static/portfolio/index.html
+++ b/backend/portfolio/static/portfolio/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -15,8 +15,8 @@
           content="Welcome to my online portfolio.
           Discover my web and mobile projects, and my development skills.
           Contact me to discuss new opportunities."/>
-  <script type="module" crossorigin src="/static/portfolio/js/index-BWC2lFi9.js"></script>
-  <link rel="stylesheet" crossorigin href="/static/portfolio/css/index-Gs_lxHpn.css">
+  <script type="module" crossorigin src="/static/portfolio/js/index-CYWISYVN.js"></script>
+  <link rel="stylesheet" crossorigin href="/static/portfolio/css/index-C1NPeC6W.css">
 </head>
 <body>
 <div id="root"></div>
@@ -174,7 +174,7 @@
         },
         {
             "id": 24,
-            "name": "Android Studio",
+            "name": "Android Studio",
             "icon": "/src/static/img/android-studio-fill.svg"
         },
         {
@@ -189,7 +189,7 @@
         },
         {
             "id": 28,
-            "name": "GNU/Linux",
+            "name": "GNU / Linux",
             "icon": "/src/static/img/linux-fill.svg"
         }
     ]
