--- a/backend/staticfiles/portfolio/index.html
+++ b/backend/staticfiles/portfolio/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -15,8 +15,8 @@
           content="Welcome to my online portfolio.
           Discover my web and mobile projects, and my development skills.
           Contact me to discuss new opportunities."/>
-  <script type="module" crossorigin src="/static/portfolio/js/index-CYWISYVN.js"></script>
-  <link rel="stylesheet" crossorigin href="/static/portfolio/css/index-C1NPeC6W.css">
+  <script type="module" crossorigin src="/static/portfolio/js/index-CqDVyHai.js"></script>
+  <link rel="stylesheet" crossorigin href="/static/portfolio/css/index-BJWkgWZB.css">
 </head>
 <body>
 <div id="root"></div>
