--- a/frontend/portfolio-react-app/index.html
+++ b/frontend/portfolio-react-app/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="robots" content="all">
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
     <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/icons/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="/site.webmanifest">
+
 
     <title>Clément Floret | Portfolio</title>
     <meta name="description"
